EDU-6594: refactoring the retrieval of projects with past upcoming tenders